0.4-dev
  * Added new robust statistical methods
  * Added Global Sky Model models to skymap
  * Added new smoothing and fitting fuctions to misc.mathutil
  * Added a progress bar for use with long-running applications

0.3.4
  * Added in the new cable attenuation model
  * Re-wrote the TBW reader so that is it ~40% faster
  * Removed unnecessary "import" statments in the TBW, TBN, and DRX readers
  * Fixed slow frame creation by sim.dp on 64-bit systems
  * Added in the new C-based correlator
  * Major re-organization of correlator.fx with regards to windowing functions

0.3.3
  * Fixed stand indexing error in uvUtils.cableAttenuation
  * Fixed Mac OS X tbnSpectra.py plotting problem (Ticket #3)
  * Spectra generated by tbwSpectra.py and tbnSpectra.py now agree with IDA v0.1
  * Fixed problems with the frame comparison attributes
  * Re-wrote the TBN reader so that it is ~20% faster
  * Fixed syntax errors in misc.difxconfig
  * Fixed MemoryError problem for some systems with tests.test_vdiff (Ticket #7)
  * Fixed a problem that caused some systems to assume that LSL was zip safe
  * Added new stand mappings that correct the 3/4 pair swaps

0.3.2
  * Added new "tutorial" style documentation for various parts of LSL
  * Added scripts tbwSplit.py and tbnSplit.py to split large TBW and TBN files down to more
    managable sizes

0.3.1
  * Fixed various typos. in correlator.fx, misc.beamformer, and reader.buffer
  * Added "close" function to writer.fitsidi

0.3
  * New setuptools-based build system
  * New, improved documentation
  * Added post-acquisition beam forming module
  * Added in modules for writing simulated data to the S60, TBW, TBN, and DRX raw data formats
  * Added a module for simulated basic test signals in TBW, TBN, and DRX data
  * Moved the lwa_user script `astrostatus.py' into the scripts directory
  * Fixed the FITS IDI writer
  * Fixed a couple of bugs dealing with incorrect chunking of data in scripts/tbwSpectra.py 
    and scripts/tbnSpectra.py