@@ -2,11 +2,8 @@
 
 """Module to simulate observations made with the DP system."""
 
-import functools
-import itertools
 import time
 import numpy
-import scipy.stats
 from aipy import coord as aipycoord
 
 from lsl import astro
@@ -48,24 +45,22 @@ def __basicTBW(fh, stands, nFrames, **kwargs):
 			for i in range(FramesThisBatch):
 				t = long(tStart*dp_common.fS) + i*samplesPerFrame
 				t += long(60*dp_common.fS*capture)
-				tFrame = numpy.arange(samplesPerFrame, dtype=numpy.float32)
+				tFrame = t/dp_common.fS - tStart + numpy.arange(samplesPerFrame, dtype=numpy.float32) / dp_common.fS
 				
 				cFrame = tbw.SimFrame(stand=stand1, frameCount=i+1, dataBits=bits, obsTime=t)
 				cFrame.xy = numpy.random.randn(2, samplesPerFrame)
 				cFrame.xy[0,:] *= maxValue/15.0
-				cFrame.xy[0,:] += maxValue*numpy.cos(2*numpy.pi*0.2041*tFrame)
+				cFrame.xy[0,:] += maxValue*numpy.cos(2*numpy.pi*40.0e6*tFrame)
 				cFrame.xy[1,:] *= maxValue/15.0
-				cFrame.xy[1,:] += maxValue*numpy.cos(2*numpy.pi*0.3061*tFrame)
-				
+				cFrame.xy[1,:] += maxValue*numpy.cos(2*numpy.pi*60.0e6*tFrame)
 				cFrame.writeRawFrame(fh)
 
 				cFrame = tbw.SimFrame(stand=stand2, frameCount=i+1, dataBits=bits, obsTime=t)
 				cFrame.xy = numpy.random.randn(2, samplesPerFrame)
 				cFrame.xy[0,:] *= maxValue/15.0
-				cFrame.xy[0,:] += maxValue*numpy.cos(2*numpy.pi*0.1531*tFrame)
+				cFrame.xy[0,:] += maxValue*numpy.cos(2*numpy.pi*30.0e6*tFrame)
 				cFrame.xy[1,:] *= maxValue/15.0
-				cFrame.xy[1,:] += maxValue*numpy.cos(2*numpy.pi*0.2551*tFrame)
-				
+				cFrame.xy[1,:] += maxValue*numpy.cos(2*numpy.pi*50.0e6*tFrame)
 				cFrame.writeRawFrame(fh)
 
 
@@ -84,14 +79,13 @@ def __basicTBN(fh, stands, nFrames, **kwargs):
 		if i % 1000 == 0:
 			print "Simulating TBN frame %i" % (i+1)
 		t = long(tStart*dp_common.fS) + long(i*dp_common.fS*samplesPerFrame/sampleRate)
-		tFrame = t/dp_common.fS + numpy.arange(samplesPerFrame, dtype=numpy.float32) / sampleRate
+		tFrame = t/dp_common.fS - tStart + numpy.arange(samplesPerFrame, dtype=numpy.float32) / sampleRate
 		for stand in stands:
 			cFrame = tbn.SimFrame(stand=stand, pol=0, frameCount=i+1, obsTime=t)
 			cFrame.iq = numpy.zeros(samplesPerFrame, dtype=numpy.singlecomplex)
 			cFrame.iq += numpy.random.randn(samplesPerFrame) + 1j*numpy.random.randn(samplesPerFrame)
 			cFrame.iq *= maxValue/15.0
 			cFrame.iq += maxValue*numpy.exp(2j*numpy.pi*upperSpike*tFrame)
-			
 			cFrame.writeRawFrame(fh)
 
 			cFrame = tbn.SimFrame(stand=stand, pol=1, frameCount=i+1, obsTime=t)
@@ -99,7 +93,6 @@ def __basicTBN(fh, stands, nFrames, **kwargs):
 			cFrame.iq += numpy.random.randn(samplesPerFrame) + 1j*numpy.random.randn(samplesPerFrame)
 			cFrame.iq *= maxValue/15.0
 			cFrame.iq += maxValue*numpy.exp(2j*numpy.pi*lowerSpike*tFrame)
-			
 			cFrame.writeRawFrame(fh)
 
 def __basicDRX(fh, stands, nFrames, **kwargs):
@@ -110,41 +103,48 @@ def __basicDRX(fh, stands, nFrames, **kwargs):
 	sampleRate = DRXFilters[filter]
 	maxValue = 7
 	samplesPerFrame = 4096
+	upperSpike1 = sampleRate / 4.0
+	lowerSpike1 = -sampleRate / 4.0
+	upperSpike2 = sampleRate / 3.0
+	lowerSpike2 = -sampleRate / 3.0
+
 	beams = stands
-	
-	part1 = scipy.stats.norm(loc=1000, scale=100, size=samplesPerFrame)
-	part2 = scipy.stats.norm(loc=3000, scale=100, size=samplesPerFrame)
-	part3 = scipy.stats.norm(loc=1500, scale=100, size=samplesPerFrame)
-	part4 = scipy.stats.norm(loc=2500, scale=100, size=samplesPerFrame)
-
-	signal1 = part1.pdf(numpy.arange(samplesPerFrame)) + 0.3*part2.pdf(numpy.arange(samplesPerFrame))
-	signal1 *= 0.2 / signal1.max() 
-	signal2 = 0.3*part1.pdf(numpy.arange(samplesPerFrame)) + part2.pdf(numpy.arange(samplesPerFrame))
-	signal2 *= 0.2 / signal2.max() 
-	signal3 = part3.pdf(numpy.arange(samplesPerFrame)) + 0.3*part4.pdf(numpy.arange(samplesPerFrame))
-	signal3 *= 0.2 / signal3.max() 
-	signal4 = 0.3*part3.pdf(numpy.arange(samplesPerFrame)) + part4.pdf(numpy.arange(samplesPerFrame))
-	signal4 *= 0.2 / signal4.max() 
-	signal = [signal1, signal2, signal3, signal4]
-
-	norm = functools.partial(numpy.random.normal, loc=8)
-
 	for i in range(nFrames):
 		if i % 1000 == 0:
 			print "Simulating DRX frame %i" % i
 		t = long(tStart*dp_common.fS) + long(i*dp_common.fS*samplesPerFrame/sampleRate)
+		tFrame = t/dp_common.fS - tStart + numpy.arange(samplesPerFrame, dtype=numpy.float32) / sampleRate
 		for beam in beams:
-			for tune in [1, 2]:
-				for pol in [0, 1]:
-					cFrame = drx.SimFrame(beam=beam, tune=tune, pol=pol, frameCount=i+1, filterCode=filter, timeOffset=0, obsTime=t, flags=0)
+			# Tuning 1:
+			cFrame = drx.SimFrame(beam=beam, tune=1, pol=0, frameCount=i+1, filterCode=filter, timeOffset=0, obsTime=t, flags=0)
+			cFrame.iq = numpy.zeros(samplesPerFrame, dtype=numpy.singlecomplex)
+			cFrame.iq += numpy.random.randn(samplesPerFrame) + 1j*numpy.random.randn(samplesPerFrame)
+			cFrame.iq *= maxValue/15.0
+			cFrame.iq += maxValue*numpy.exp(2j*numpy.pi*upperSpike1*tFrame)
+			cFrame.writeRawFrame(fh)
+			
+			cFrame = drx.SimFrame(beam=beam, tune=1, pol=1, frameCount=i+1, filterCode=filter, timeOffset=0, obsTime=t, flags=0)
+			cFrame.iq = numpy.zeros(samplesPerFrame, dtype=numpy.singlecomplex)
+			cFrame.iq += numpy.random.randn(samplesPerFrame) + 1j*numpy.random.randn(samplesPerFrame)
+			cFrame.iq *= maxValue/15.0
+			cFrame.iq += maxValue*numpy.exp(2j*numpy.pi*lowerSpike1*tFrame)
+			cFrame.writeRawFrame(fh)
 
-					iq = numpy.zeros(samplesPerFrame, dtype=numpy.singlecomplex)
-					for chan, scale in itertools.izip(numpy.arange(samplesPerFrame), signal[2*(tune-1)+pol]):
-						iq.real[chan] = norm(scale=scale)
-						iq.imag[chan] = norm(scale=scale)
-					cFrame.iq = iq
+			# Tuning 2:
+			cFrame = drx.SimFrame(beam=beam, tune=2, pol=0, frameCount=i+1, filterCode=filter, timeOffset=0, obsTime=t, flags=0)
+			cFrame.iq = numpy.zeros(samplesPerFrame, dtype=numpy.singlecomplex)
+			cFrame.iq += numpy.random.randn(samplesPerFrame) + 1j*numpy.random.randn(samplesPerFrame)
+			cFrame.iq *= maxValue/15.0
+			cFrame.iq += maxValue*numpy.exp(2j*numpy.pi*lowerSpike2*tFrame)
+			cFrame.writeRawFrame(fh)
+			
+			cFrame = drx.SimFrame(beam=beam, tune=2, pol=1, frameCount=i+1, filterCode=filter, timeOffset=0, obsTime=t, flags=0)
+			cFrame.iq = numpy.zeros(samplesPerFrame, dtype=numpy.singlecomplex)
+			cFrame.iq += numpy.random.randn(samplesPerFrame) + 1j*numpy.random.randn(samplesPerFrame)
+			cFrame.iq *= maxValue/15.0
+			cFrame.iq += maxValue*numpy.exp(2j*numpy.pi*upperSpike2*tFrame)
+			cFrame.writeRawFrame(fh)
 
-					cFrame.writeRawFrame(fh)
 
 def basicSignal(fh, stands, nFrames, mode='DRX', filter=6, bits=12, tStart=0):
 	"""Generate a collection of frames with a basic test signal for TBW, TBN, 
@@ -163,7 +163,12 @@ def basicSignal(fh, stands, nFrames, mode='DRX', filter=6, bits=12, tStart=0):
 	      (-sampleRate/4) for y-pol.
 
 	DRX
-	    * same test signal used in the original lwa_dp_sim
+	    *  noise + (sampleRate/4) kHz signal for x-pol. and noise + 
+	      (-sampleRate/4) for y-pol.
+	      -> tuning 1
+	    *  noise + (-sampleRate/3) kHz signal for x-pol. and noise + 
+	      (sampleRate/3) for y-pol.
+	      -> tuning 2
 	    
 	All modes need to have stands (beams in the case of DRX) and number of
 	frames to generate.  TBW also needs to 'bits' keyword set to generate 
